--- a/index.html
+++ b/index.html
@@ -343,6 +343,8 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents-Organisational Practice--118161433</li>
 
+<li>$:/state/toc/TableOfContents-People--118161433</li>
+
 <li>$:/state/toc/TableOfContents-Performance Art--118161433</li>
 
 <li>$:/state/toc/TableOfContents-Research--118161433</li>
@@ -447,6 +449,8 @@ Error message and password prompt
 
 <li>Island Life</li>
 
+<li>Jack Halberstam</li>
+
 <li>Karaoke Court</li>
 
 <li>Kiln Gods and Kitchen Gods</li>
@@ -462,6 +466,8 @@ Error message and password prompt
 <li>Office of Public Ritual</li>
 
 <li>Organisational Practice</li>
+
+<li>People</li>
 
 <li>Performance Art</li>
 
@@ -12934,6 +12940,9 @@ exports.context = contextWidget;
 <div created="20210926064608845" modified="20210926083237970" title="$:/state/toc/TableOfContents-Organisational Practice--118161433">
 <pre>close</pre>
 </div>
+<div created="20210929044046973" modified="20210929045954039" title="$:/state/toc/TableOfContents-People--118161433">
+<pre>close</pre>
+</div>
 <div created="20210925131353072" modified="20210926081148836" title="$:/state/toc/TableOfContents-Performance Art--118161433">
 <pre>close</pre>
 </div>
@@ -12979,7 +12988,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20210928091852078" list="Notice Hello" modified="20210928091904917" title="$:/StoryList">
+<div created="20210929040337383" list="Notice Hello" modified="20210929045942685" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13236,8 +13245,14 @@ Work displayed in London can be viewed by appointment at the Department for Heal
 2. The General Social Care Council was set up in 2001 following the enactment of the Care Standards Act 2000 and the lessons learnt from the Victoria Climbie case. The GSCC inherited the responsibilities of the previous Central Council for Education and Training in Social Work (1970-2001). It’s main responsibility was to establish and maintain the Register of Social Workers. The GSCC exists over two sites: Rugby and London. The London office was located in London Bridge until it was moved in its final months to the Department for Health building in Elephant and Castle.
 </pre>
 </div>
-<div created="20210925122310258" modified="20210925122311090" tags="TableOfContents" title="Concepts">
-<pre></pre>
+<div created="20210925122310258" modified="20210929044116247" tags="TableOfContents [[Jack Halberstam]]" title="Concepts">
+<pre>Concepts, ideas and theories that inform my work. This is my 'archive of subjugated knowledge' as [[Jack Halberstam]] would put it. Here is an extract from an interview where they talk about the '[[eccentric or silly archive|https://www.trikster.net/1/halberstam/1.html]]':
+
+
+&lt;&lt;&lt;
+When people want to think differently they actually have to use a) a different archive, and b) different concepts. And it is actually remarkably difficult to think outside of received wisdom, or “common sense”, as Gramsci would call it. We have to be very creative in the way in which we produce both new vocabularies and new structures. We must validate different kinds of concepts and move to different archives, and take seriously what Foucault calls subjugated knowledge. Rather then just saying that subjugated knowledge is knowledge that has been suppressed, and that we must dig deep to find it - we need to understand subjugated knowledge as a form of thinking that has been suppressed. 
+&lt;&lt;&lt;
+</pre>
 </div>
 <div created="20210925113223427" modified="20210925122339762" tags="" title="Contact">
 <pre>💌 email me using [[this contact form|https://docs.google.com/forms/d/e/1FAIpQLScbnU-lUYaEJSphpMX5ISEYthm_OfrnWbpy04_dGLpVomu9EA/viewform?usp=sf_link]]
@@ -13511,6 +13526,26 @@ Co-curated with Mirka Golden-Hann, we will be exploring some of the political an
 
 Image: Concrete dome containing nuclear waste in the Marshall Islands, Central Pacific Ocean.</pre>
 </div>
+<div created="20210929041007058" modified="20210929045836078" tags="People" title="Jack Halberstam">
+<pre>[img[https://upload.wikimedia.org/wikipedia/commons/5/51/Jack_Halberstam_03.jpg]]
+https://en.wikipedia.org/wiki/Jack_Halberstam
+
+In 2013, I attended [[a conference at Tate Modern on gender|https://www.tate.org.uk/whats-on/tate-modern/charming-revolution-congress-gender-talents-and-wildness/gender-talents-special]] where Jack Halberstam, Paul Preciado and others spoke. It was the first time I saw institutional critique in action where speakers exposed the workings and machinations of the event itself and how it was produced by the Tate, e.g., the speakers' low fee, their objectification, the appropriation of their radicalism for the institution, etc.
+
+I remember Jack talking about wildness and the animated movie //Fantastic Mr Fox// and how wildness is a space of alterity and adventure where new politics and new worldings can happen. Halberstam writes about the conference in [[an article for e-flux|https://www.e-flux.com/journal/44/60142/charming-for-the-revolution-a-gaga-manifesto/]]:
+
+
+&lt;&lt;&lt;
+We learn many things in Fantastic Mr. Fox about being charming, being fantastic, and creating revolt. But the best and most poignant scene comes in the form of a quiet encounter with the wild at the end of the film. In this scene, Mr. Fox is on his way home after escaping from the farmers once again. As he and his merry band of creatures turn the corner on their motorbike with sidecar, they come upon a spectral figure loping into their path. Mr. Fox pulls up and they all stand in awe. They watch as a lone wolf turns and stares back at them. Mr. Fox, ever the diplomat, declares his phobia of wolves and yet tries to communicate with the wolf in three languages. When nothing works, he tries gestures. With tears in his eyes, Mr. Fox raises a fist to the wolf on the hill and stares transfixed as the wolf understands the universal sign of solidarity and raises his own fist in response, before drifting off into the forest. This exchange, silent and profound, brings tears to Mr. Fox’s eyes precisely because it puts him face to face with the wildness he fears and the wildness he harbors within himself.
+
+Whether you see the scene as corny or contrived, odd or predictable, generic or fetishistic, you know that you have witnessed a moment that Deleuze might call “pure cinema.” This scene, in other words, draws us into the charisma of the image; it speaks a visual grammar that cannot be reduced to the plot and it enacts a revolutionary instance that we, like Mr. Fox, cannot put into words. And because we are confronted with the possibility of a life beyond the limits of our comprehension, because we see the very edge of the framing of knowing and seeing, and because we see Mr. Fox reaching for something just out of reach, we, like him, are changed by the chance encounter.
+
+The wild here is a space that opens up when we step outside of the conventional realms of political action and confront our fears; it rhymes with Muñoz’s sense of queer utopia and manifests what Fred Moten and Stefano Harney call the power of the “the undercommons.” The wild and the fantastic enter the frame of visibility in the form of an encounter between the semi-domesticated and the unknown, speech and silence, motion and stillness. Ultimately, the revolutionary is a wild space where temporality is uncertain, relation is improvised, and futurity is on hold. Into this “any instant whatsoever” (Deleuze) walks a figure that we cannot classify, that refuses to engage us in conventional terms, but speaks instead in the gestural language of solidarity, connection, and insurrection.
+&lt;&lt;&lt;
+
+&lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/ELqdLvz60zA&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;
+</pre>
+</div>
 <div created="20210925104551457" modified="20210925115013642" tags="[[Selected Works]]" title="Karaoke Court">
 <pre>[img[https://previews.dropbox.com/p/thumb/ABS5rSV369vyFPZSns-kqqmsChfsFKI0rCjpq-2CzOKy5Llaa0jKnl1mKw9_V60Pu7OYKAyTUW_Lc7R5uaeTRf8C7Kp-jY_SonMIWBPuHosH4dgKaaCOzNQXXCedGkS7LPoTUJ8edlebkgOO0q44Yp3wEcd1w042GPB1QRZUkdw9ERFZLxSTDXrApW8TkTGfhEqLbxM7cxV8GxBz8cSzdPW5ef_XfxeSu2d3lE_j-wggU-nC6EneJ1_l9JSgOeIhNOLNdokmLkdClBC0FDl7THJf1ea0OVl9wnAIZfDbEZ-lednbNSfVyEJaM8KNgM5bBVIPdtXS1ko3czLHGaXFggHhn3eXGqM9-HDKVahXoFfNow/p.jpeg?fv_content=true&amp;size_mode=5]]
 
@@ -13550,13 +13585,13 @@ An overview of New Materialism as a theory can be found [[here|https://www.oxfor
 <div created="20200808143152856" modified="20200808143154518" tags="" title="New Tiddler">
 <pre></pre>
 </div>
-<div created="20210925104118267" modified="20210927081902367" tags="" title="Notice">
+<div created="20210925104118267" modified="20210929050135871" tags="" title="Notice">
 <pre>`This site is new and still under construction. Check back now and again to see how it grows.`
 
 ''New things added'':
-
-25 Sep 2021 - Create site structure: About, Selected Works and other sections.
-&lt;br&gt;26 Sep 2021 - Research, Current Projects, Curating sections</pre>
+&lt;br&gt;29 Sep 2021 - People, Concepts, entry on Jack Halberstam
+&lt;br&gt;26 Sep 2021 - Research, Current Projects, Curating sections
+&lt;br&gt;25 Sep 2021 - Create site structure: About, Selected Works and other sections.</pre>
 </div>
 <div created="20210925115759338" modified="20210925122816106" tags="[[Selected Works]] [[Social Practice]]" title="Office of Public Ritual">
 <pre>[img[https://previews.dropbox.com/p/thumb/ABQN_ANlb1JDsE26Tv0ruljrHF1nN7bRa6003gmEAAmgu0VJF-Anom-RNORi5-LUR3El3zteeyvVVCgBsCLaPgWu5x4RcWpcL2QcOC1z1oKiuzuzX_s81Oz8WTwiWSudh2oyRAOIJJ3B5et5TAOmdRF8lN_bZkXfGFhZp-26GZtAQ41GtL8VeUSEF0id7ePKzT_k2B--CtaWqfbUM9txyTsU2Sk_J-ythl2vLCXtiGIsdk4V9dbgcX4ouVIcxnmpr1Pq2MEBpmC56ygpgBC6qQgUWZTYtA8xFMu_vBmU79wp4P8wQ3LGgnxUMe48yE-da6z6wMfcAETR80oxyO4xxluA9soD3S3ZwBXcGCqDCmQvPw/p.jpeg?fv_content=true&amp;size_mode=5]]
@@ -13569,6 +13604,15 @@ More information can be found at OPR’s website: [[www.officeofpublicritual.co
 </div>
 <div created="20210926053905513" modified="20210926053930527" tags="TableOfContents" title="Organisational Practice">
 <pre></pre>
+</div>
+<div created="20210929041025062" modified="20210929044016278" tags="TableOfContents" title="People">
+<pre>There are artists, writers, makers, teachers who form a 'cloud of witnesses' in my practice and thinking. Some of these people I know personally, many I don't but whose work, life and knowledge haunt me and keep me company. 
+
+I think the Indigo Girls invokes this haunting best for me in their 1992 album //Rites of Passage//, especially in their song [[Galileo|https://music.youtube.com/watch?v=aOhqEHYlIrU&amp;feature=share]]. &quot;I call on the resting soul of Galileo king of night vision, king of insight ... I offer thanks to those before me&quot;, they sing.
+
+So far, I continue to give thanks and call upon the souls and insights of Stuart Hall, Jean Fisher, Stefano Harney &amp; Fred Moten, Sylvia Wynter, Anna Tsing, Karen Barad, Zhuangzi, Hannah Arendt and more. 
+
+</pre>
 </div>
 <div created="20210925121911891" modified="20210925121912917" tags="TableOfContents" title="Performance Art">
 <pre></pre>
