--- a/index.html
+++ b/index.html
@@ -321,6 +321,8 @@ Error message and password prompt
 
 <li>$:/state/image-picker/system-369504366</li>
 
+<li>$:/state/search/currentTab</li>
+
 <li>$:/state/tab--1963855381</li>
 
 <li>$:/state/tab--2112689675</li>
@@ -328,6 +330,8 @@ Error message and password prompt
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
+
+<li>$:/state/tab/search-results/sidebar</li>
 
 <li>$:/state/tab/sidebar--595412856</li>
 
@@ -12913,6 +12917,9 @@ exports.context = contextWidget;
 <div created="20210925060522447" modified="20210925060522447" title="$:/state/image-picker/system-369504366">
 <pre>show</pre>
 </div>
+<div created="20211028130527432" modified="20211028130527432" title="$:/state/search/currentTab">
+<pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
+</div>
 <div created="20210926054606497" modified="20210927072528425" title="$:/state/tab--1963855381">
 <pre>$:/plugins/sq/Stories/settings</pre>
 </div>
@@ -12924,6 +12931,9 @@ exports.context = contextWidget;
 </div>
 <div created="20210925061539666" modified="20210925061539666" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+</div>
+<div created="20211028130527432" modified="20211028130527432" title="$:/state/tab/search-results/sidebar">
+<pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
 </div>
 <div created="20210925062958213" modified="20211005151204838" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
@@ -12964,8 +12974,8 @@ exports.context = contextWidget;
 <div created="20210926053815363" modified="20211005145940195" title="$:/state/toc/TableOfContents-Sculpture--118161433">
 <pre>close</pre>
 </div>
-<div created="20210925104810836" modified="20211005150415922" title="$:/state/toc/TableOfContents-Selected Works--118161433">
-<pre>close</pre>
+<div created="20210925104810836" modified="20211028125159278" title="$:/state/toc/TableOfContents-Selected Works--118161433">
+<pre>open</pre>
 </div>
 <div created="20210925130341602" modified="20211005150944967" title="$:/state/toc/TableOfContents-Social Practice--118161433">
 <pre>close</pre>
@@ -13003,7 +13013,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20211005144311655" list="" modified="20211005151209398" title="$:/StoryList">
+<div created="20211028125201063" list="[[Karaoke Court]] Notice Hello" modified="20211028125201063" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13569,12 +13579,25 @@ The wild here is a space that opens up when we step outside of the conventional 
 &lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/ELqdLvz60zA&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;
 </pre>
 </div>
-<div created="20210925104551457" modified="20211005150302795" tags="[[Selected Works]]" title="Karaoke Court">
+<div created="20210925104551457" modified="20211028131048010" tags="[[Selected Works]]" title="Karaoke Court">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/KC_21.jpg?raw=true]]
 
 2013 and ongoing, various sites, but mainly developed for my solo show [[How To Do Things With Rules]] at ICA Singapore.
 
-Karaoke Court is a work that explores karaoke singing as a platform for resolving disputes. The work is a revival of the spirit of Central Arctic Eskimo Song Duels, where litigants presented their grievances to the entire Inuit community for judgment in the form of humorous and satirical song. Participants are invited to resolve their disputes by singing karaoke in front of an audience who will decide who wins. The processes and decision of the Karaoke Court are made legally binding via the participants’ signing of an Arbitration Contract. Karaoke Court reflects on issues of community conflict and cohesion, and the integral role of presentation and performance in social and legal judgment. Embedded within community practices and spaces, the work does not just attempt to make new art but to propose new legal norms.</pre>
+Karaoke Court is a work that explores karaoke singing as a platform for resolving disputes. The work is inspired by song battle traditions across the world where 'litigants' presented their grievances in front of their community for judgment in the form of humorous, witty or satirical song. In this work, participants are invited to resolve their disputes by singing karaoke in front of an audience who will decide who wins. The processes and decision of the Karaoke Court are made legally binding via the participants’ signing of an Arbitration Contract. Karaoke Court reflects on issues of community conflict and cohesion, and the central role of presentation and performance in social and legal judgment. Embedded within community practices and spaces, the work does not just attempt to make new art but to propose new legal norms.
+
+//Karaoke Court sittings to date://
+
+14 March 2014:  Karaoke Court Peckham - The Gowlett Arms pub, Peckham, South London. 
+
+5 September 2015:  Karaoke Court Singapore - part of [[How To Do Things With Rules]] at the Institute of Contemporary Arts Singapore.
+
+23 June 2016:  Karaoke Court Hackney - part of Law's Imagination at arebyte gallery and the Yard Theatre, Hackney Wick, East London
+
+9 July 2017:  Karaoke Court Beijing - part of the [[Miss Ruthless with a Smile|https://ucca.org.cn/en/program/miss-ruthless-with-a-smile-2//]] programme at UCCA Center for Contemporary Art, Beijing.
+
+8 February 20129 Karaoke Court Hong Kong - part of Art After Hours at [[Tai Kwun Contemporary|https://www.taikwun.hk/en/programme/detail/art-after-hours-karaoke-court-by-jack-tan/291]]
+</pre>
 </div>
 <div created="20210925111437443" modified="20211005150237091" tags="[[Selected Works]]" title="Kiln Gods and Kitchen Gods">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/SSW-turns-40.jpg?raw=true]]
