--- a/index.html
+++ b/index.html
@@ -13035,7 +13035,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20211028125201063" list="" modified="20211028191141378" title="$:/StoryList">
+<div created="20211028125201063" list="" modified="20211028191640194" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13745,10 +13745,11 @@ An overview of New Materialism as a theory can be found [[here|https://www.oxfor
 <div created="20200808143152856" modified="20200808143154518" tags="" title="New Tiddler">
 <pre></pre>
 </div>
-<div created="20210925104118267" modified="20210929050135871" tags="" title="Notice">
+<div created="20210925104118267" modified="20211028191715963" tags="" title="Notice">
 <pre>`This site is new and still under construction. Check back now and again to see how it grows.`
 
 ''New things added'':
+&lt;br&gt;28 Oct 2021 - Karoke Court, Law Space &amp; Materialism
 &lt;br&gt;29 Sep 2021 - People, Concepts, entry on Jack Halberstam
 &lt;br&gt;26 Sep 2021 - Research, Current Projects, Curating sections
 &lt;br&gt;25 Sep 2021 - Create site structure: About, Selected Works and other sections.</pre>
