--- a/index.html
+++ b/index.html
@@ -421,6 +421,8 @@ Error message and password prompt
 
 <li>Actor-Network Theory</li>
 
+<li>Bartlett Design and Creative Practice</li>
+
 <li>Clay Commons</li>
 
 <li>Closure</li>
@@ -469,13 +471,21 @@ Error message and password prompt
 
 <li>Karaoke Court documents</li>
 
+<li>Karaoke Court space</li>
+
 <li>Kiln Gods and Kitchen Gods</li>
 
 <li>Law and Humanties Journal</li>
 
 <li>Law, Space and Materiality</li>
 
+<li>Learning Nonhuman</li>
+
 <li>legal aesthetics</li>
+
+<li>materiality</li>
+
+<li>more than human</li>
 
 <li>New Materialism</li>
 
@@ -510,6 +520,8 @@ Error message and password prompt
 <li>Siraj -v- Olivia</li>
 
 <li>Social Practice</li>
+
+<li>space</li>
 
 <li>TableOfContents</li>
 
@@ -12954,14 +12966,14 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20211028191220267" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20211029080811228" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20210925122403466" modified="20211028190137390" title="$:/state/toc/TableOfContents-Concepts--118161433">
-<pre>close</pre>
+<div created="20210925122403466" modified="20211029073347001" title="$:/state/toc/TableOfContents-Concepts--118161433">
+<pre>open</pre>
 </div>
 <div created="20210926083300728" modified="20211005144728871" title="$:/state/toc/TableOfContents-Curating--118161433">
 <pre>close</pre>
@@ -12993,8 +13005,8 @@ exports.context = contextWidget;
 <div created="20210926053815363" modified="20211005145940195" title="$:/state/toc/TableOfContents-Sculpture--118161433">
 <pre>close</pre>
 </div>
-<div created="20210925104810836" modified="20211028191222505" title="$:/state/toc/TableOfContents-Selected Works--118161433">
-<pre>close</pre>
+<div created="20210925104810836" modified="20211029072455998" title="$:/state/toc/TableOfContents-Selected Works--118161433">
+<pre>open</pre>
 </div>
 <div created="20210925130341602" modified="20211005150944967" title="$:/state/toc/TableOfContents-Social Practice--118161433">
 <pre>close</pre>
@@ -13005,17 +13017,17 @@ exports.context = contextWidget;
 <div created="20211005150956272" modified="20211028151706741" title="$:/state/toc/TableOfContents-Writing--118161433">
 <pre>close</pre>
 </div>
-<div created="20210926064819963" modified="20211005144519278" title="$:/state/toc/TableOfContents/Concepts-found performance--118161433">
-<pre>open</pre>
+<div created="20210926064819963" modified="20211029073349257" title="$:/state/toc/TableOfContents/Concepts-found performance--118161433">
+<pre>close</pre>
 </div>
-<div created="20210925122405914" modified="20211005144525183" title="$:/state/toc/TableOfContents/Concepts-New Materialism--118161433">
-<pre>open</pre>
+<div created="20210925122405914" modified="20211029073350913" title="$:/state/toc/TableOfContents/Concepts-New Materialism--118161433">
+<pre>close</pre>
 </div>
 <div created="20210926070707157" modified="20211005145317550" title="$:/state/toc/TableOfContents/Current Projects-Global Ethnic Majorities Board Association--118161433">
 <pre>close</pre>
 </div>
-<div created="20211028155446403" modified="20211028161841906" title="$:/state/toc/TableOfContents/Selected Works-Karaoke Court--118161433">
-<pre>open</pre>
+<div created="20211028155446403" modified="20211029072457758" title="$:/state/toc/TableOfContents/Selected Works-Karaoke Court--118161433">
+<pre>close</pre>
 </div>
 <div created="20210925130420135" modified="20210925130438559" title="$:/state/toc/TableOfContents/Social Practice-Global Ethnic Majorities Board Association--118161433">
 <pre>close</pre>
@@ -13035,7 +13047,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20211028125201063" list="" modified="20211028191640194" title="$:/StoryList">
+<div created="20211029071824533" list="" modified="20211029080804116" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13247,6 +13259,32 @@ Contact or connect with me [[here|Contact]].
 <div created="20210927081650216" modified="20210927081650216" title="Actor-Network Theory">
 <pre></pre>
 </div>
+<div created="20211029073747112" modified="20211029075015410" tags="" title="Bartlett Design and Creative Practice">
+<pre>!!Signposts for my chat with Bartlett students on 29 Oct 2021
+
+''Law and Art as practice'':
+
+* Law //about// Art -v- Art //about// Law -v- Law //as// Art
+* [[Law, Space and Materiality]]
+
+''My work: from litigation to legislation'':
+
+* [[Karaoke Court]]
+* [[Four Legs Good]]
+* [[Learning Nonhuman]]
+* [[Devising Governance]]
+
+''Two Karaoke Court case studies'':
+
+* [[Pam -v- Pauline]]
+* [[Siraj -v- Olivia]]
+
+''Producing Karaoke Court'':
+
+* [[Karaoke Court documents]]
+* [[Karaoke Court space]]
+</pre>
+</div>
 <div created="20210928082820116" modified="20211005144847219" tags="ceramics Talks [[Current Projects]]" title="Clay Commons">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/ClayCommonsLogo.jpg?raw=true]]
 
@@ -13380,7 +13418,7 @@ Read about the Guildhall School of Music and Drama's symposium on found performa
 
 Image: ‘Otherwise normal ECG’ (2018), Stuart Wood, score detail (work in progress), reproduced by permission</pre>
 </div>
-<div created="20210925105104735" modified="20211005145505456" tags="[[Selected Works]] [[Performance Art]] [[Installation Art]]" title="Four Legs Good">
+<div created="20210925105104735" modified="20211029073419502" tags="[[Selected Works]] [[Performance Art]] [[Installation Art]] [[more than human]]" title="Four Legs Good">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/FLG_Jess-the-Judge.jpg?raw=true]]
 
  ''17 – 24 November 2018, Compass Festival, Leeds''
@@ -13403,7 +13441,9 @@ Day of live hearings 24 November 2018
 
 ''5pm – R -v- Marla and Polly Turnbull.'' Marla the Staffie charged with 1 count of ‘being a dangerous dog’ under the Crimes By Animals Act 1928, while her owner Ms Polly Turnbull is charged with owning a dog dangerously out of control.
 
-//Four Legs Good// was commissioned by [[Compass Festival|https://compassliveart.org.uk/]] and supported by [[Diverse Actions|https://www.liveartuk.org/activities/diverse-actions/]] and Arts Council England.</pre>
+//Four Legs Good// was commissioned by [[Compass Festival|https://compassliveart.org.uk/]] and supported by [[Diverse Actions|https://www.liveartuk.org/activities/diverse-actions/]] and Arts Council England.
+
+&lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/0ojOAs04sIY&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;</pre>
 </div>
 <div created="20210925113948734" modified="20211005151020850" tags="Writing" title="Four Legs Good, Two Legs Good">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/four%20legs%20good%20two%20legs%20good%20cover.jpg?raw=true]]
@@ -13691,6 +13731,41 @@ Marissa -v- Tom (see above), a couples dispute (11 June 2016, Karaoke Court Hack
 
 [[Click here|Sample Karaoke Court Arbitration Agreement]]</pre>
 </div>
+<div created="20211029075918974" modified="20211029080743637" title="Karaoke Court space">
+<pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Karaoke%20Court%20Singapore%20event%202.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Karaoke%20Court%20Singapore%20event%206.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Karaoke%20Court%20Singapore%20event%205.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Karaoke%20Court%20Singapore%20event%207.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Karaoke%20Court%20Singapore%20event%208.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Karaoke%20Court%20Singapore%20event%2027.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Karaoke%20Court%20Singapore%20event%2029.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Karaoke%20Court%20Singapore%20event%2026.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Karaoke%20Court%20Singapore%20event%2023.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Karaoke%20Court%20Singapore%20event%2025.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Karaoke%20Court%20Singapore%20event%2010.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Karaoke%20Court%20Hackney%20event%20_85A9612.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Karaoke%20Court%20Hackney_85A0158.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Karaoke%20Court%20Hackney_85A9583.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Karaoke%20Court%20Hackney_85A9830.jpg?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/Karaoke%20Court%20Hackney%20event_85A9983_sm.jpg?raw=true]]
+
+</pre>
+</div>
 <div created="20210925111437443" modified="20211005150237091" tags="[[Selected Works]]" title="Kiln Gods and Kitchen Gods">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/SSW-turns-40.jpg?raw=true]]
 
@@ -13711,8 +13786,10 @@ To celebrate the close of our 40th year at Scottish Sculpture Workshop, we have 
 
 I will be co-editing a special issue of the [[Law and Humanities Journal|https://www.tandfonline.com/toc/rlah20/current]] with law lecturer [[Lucy Finchett-Maddock|https://profiles.sussex.ac.uk/p329231-lucy-finchett-maddock]] on ''Practice and Process'' (Vol. 16.2) to be published in Dec 2022.</pre>
 </div>
-<div created="20211028185727993" modified="20211028190944870" tags="[[legal aesthetics]]" title="Law, Space and Materiality">
-<pre>Extract from an interview with Dr Swastee Ranjan for the Art Law Network https://artlawnetwork.org/interview-with-artist-jack-tan/
+<div created="20211028185727993" modified="20211029073524685" tags="[[legal aesthetics]] space materiality" title="Law, Space and Materiality">
+<pre>[img[https://github.com/jackkytan/websiteimages/blob/master/dry%20stone%20wall.jpg?raw=true]]
+
+Extract from an interview with Dr Swastee Ranjan for the Art Law Network https://artlawnetwork.org/interview-with-artist-jack-tan/
 
 ''What appears in your work is some sense of dynamism – between the worlds of art and law.  But what about the question of representation – how art represents law doesn’t seem to have much space in your work?''
 
@@ -13728,9 +13805,33 @@ The law, like Art, is something that human beings do. It is deep in our nature. 
 
 ''In your work, you put special emphasis on materiality whether in terms of performances or in terms of a certain semiotic reference – such as for the Karaoke Court, you use flyers and logos. Do you want to say something about that?''
 
-__Law has always used visual and material culture to reinforce what it is__. You only have to walk around the Royal Courts of Justice in London to realise that, or any supreme court in any country I bet. But let’s say we meet in a new land somewhere and agree that this patch of land is mine and that patch of land is yours. But for some reason we are not happy with just a verbal agreement, and feel we have to draw a line between us. That line could be drawn in the dirt or marked out with stones, but it often takes the form of a fence or wall.  That line is where a visualisation and materialisation of law begins. Depending on how much we like and trust each other we may decide to build a high iron fence or a short hedge. At some point we may want to declare this to third parties by materialising more marks called road signs or ‘boundary stones’ as the ancient Babylonians did. These are aesthetic decisions we are making to embody the law. I think law and aesthetics in this way have always been close – and there’s always a conversation between the two. That is why  it has been important for me to be aware of material and visual symbolism within my work through use of contemporary signifiers such as logos, branding and graphic design, and to always re-understand how law is creating a visual and material culture and vice versa.</pre>
+__Law has always used visual and material culture to reinforce what it is__. You only have to walk around the Royal Courts of Justice in London to realise that, or any supreme court in any country I bet. But let’s say we meet in a new land somewhere and agree that this patch of land is mine and that patch of land is yours. But for some reason we are not happy with just a verbal agreement, and feel we have to draw a line between us. That line could be drawn in the dirt or marked out with stones, but it often takes the form of a fence or wall.  That line is where a visualisation and materialisation of law begins. Depending on how much we like and trust each other we may decide to build a high iron fence or a short hedge. At some point we may want to declare this to third parties by materialising more marks called road signs or ‘boundary stones’ as the ancient Babylonians did. These are aesthetic decisions we are making to embody the law. I think law and aesthetics in this way have always been close – and there’s always a conversation between the two. That is why  it has been important for me to be aware of material and visual symbolism within my work through use of contemporary signifiers such as logos, branding and graphic design, and to always re-understand how law is creating a visual and material culture and vice versa.
+
+&lt;iframe src=&quot;https://player.vimeo.com/video/417392415?h=d1323a98c8&quot; width=&quot;640&quot; height=&quot;360&quot; frameborder=&quot;0&quot; allow=&quot;autoplay; fullscreen; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;
+&lt;p&gt;&lt;a href=&quot;https://vimeo.com/417392415&quot;&gt;NICK MODRZEWSKI on law and language&lt;/a&gt; from &lt;a href=&quot;https://vimeo.com/writingandconcepts&quot;&gt;WRITING&amp;amp;CONCEPTS&lt;/a&gt; on &lt;a href=&quot;https://vimeo.com&quot;&gt;Vimeo&lt;/a&gt;.&lt;/p&gt;</pre>
 </div>
-<div created="20211028190202349" modified="20211028190204182" tags="TableOfContents" title="legal aesthetics">
+<div created="20211029072634615" modified="20211029073311474" tags="[[more than human]]" title="Learning Nonhuman">
+<pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Learning%20Nonhuman%20-%20screengrab.jpg?raw=true]]
+
+
+From FACT Liverpool's website: 
+
+&lt;&lt;&lt;
+Over 12 weeks, Jack worked collaboratively with an intergenerational group of participants and the Learning Team at FACT to create an MPV (minimum viable product) version of the game called Non-Humans of Liverpool. Gameplay was tested in a citywide tournament and at FACT as a governance and environmental planning tool.
+
+Over this time, we realised that the learning process itself was the most productive and artistically interesting aspect of the project, in particular, the process of trying to put ourselves in the position of a non-human person and seeing/smelling/feeling for our shared world as they do. We had to question how we learned and articulated non-human interests into arguments that made sense to human decision-makers. Ultimately, this project was an attempt to perceive and understand the non-human Other, and to enable a space for practical inclusion of them in our laws and our ways of living and working.
+&lt;&lt;&lt;
+
+Go to the FACT website to see the work: https://www.fact.co.uk/learning-non-human
+</pre>
+</div>
+<div created="20211028190202349" modified="20211029073441694" tags="Concepts" title="legal aesthetics">
+<pre></pre>
+</div>
+<div created="20211029073532521" modified="20211029073533763" tags="Concepts" title="materiality">
+<pre></pre>
+</div>
+<div created="20211029073333808" modified="20211029073344425" tags="Concepts" title="more than human">
 <pre></pre>
 </div>
 <div created="20210925122257314" modified="20211028152119845" tags="Concepts" title="New Materialism">
@@ -13745,11 +13846,11 @@ An overview of New Materialism as a theory can be found [[here|https://www.oxfor
 <div created="20200808143152856" modified="20200808143154518" tags="" title="New Tiddler">
 <pre></pre>
 </div>
-<div created="20210925104118267" modified="20211028191715963" tags="" title="Notice">
+<div created="20210925104118267" modified="20211029073556531" tags="" title="Notice">
 <pre>`This site is new and still under construction. Check back now and again to see how it grows.`
 
 ''New things added'':
-&lt;br&gt;28 Oct 2021 - Karoke Court, Law Space &amp; Materialism
+&lt;br&gt;28 Oct 2021 - Karoke Court, Law Space &amp; Materiality
 &lt;br&gt;29 Sep 2021 - People, Concepts, entry on Jack Halberstam
 &lt;br&gt;26 Sep 2021 - Research, Current Projects, Curating sections
 &lt;br&gt;25 Sep 2021 - Create site structure: About, Selected Works and other sections.</pre>
@@ -14018,6 +14119,9 @@ Should the Respondent win, the Claimant agrees that he and three other band memb
 Verdict:  Olivia won</pre>
 </div>
 <div created="20210925122825136" modified="20210925122826081" tags="TableOfContents" title="Social Practice">
+<pre></pre>
+</div>
+<div created="20211029073540794" modified="20211029073542003" tags="Concepts" title="space">
 <pre></pre>
 </div>
 <div caption="Contents" created="20210925093547619" list-after="$:/core/ui/SideBar/Open" modified="20210925113726647" tags="$:/tags/SideBar" title="TableOfContents">
